samples/_failures_safe/1761489139_feda16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24de612c.c: In function ‘main’:
./samples/SAFE/__tmp_24de612c.c:153:5: error: expected expression at end of input
  153 |     if (result.data != NULL)
      |     ^~
./samples/SAFE/__tmp_24de612c.c:153:5: error: expected declaration or statement at end of input
